--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3' // If using OkHttp
-
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'org.json:json:20210307'
 }
 apply plugin: 'com.google.gms.google-services'
