--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'org.json:json:20210307'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 }
 apply plugin: 'com.google.gms.google-services'
